--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-cors-headers==4.4.0
 djangorestframework==3.15.2
 et-xmlfile==1.1.0
 filelock==3.16.0
+gunicorn==23.0.0
 numpy==2.1.0
 openpyxl==3.1.5
+packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 platformdirs==4.3.2
