--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -2,4 +2,8 @@
 cmds = ["pip install -r requirements.txt"]
 
 [phases.start]
-cmds = ["python manage.py migrate", "python manage.py collectstatic --noinput", "gunicorn DevLink.wsgi:application --bind 0.0.0.0:$PORT"]
+cmds = [
+  "python manage.py migrate",
+  "python manage.py collectstatic --noinput",
+  "gunicorn DevLink.wsgi:application --bind 0.0.0.0:$PORT"
+]
