--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pandas==2.2.2
 pillow==10.4.0
 platformdirs==4.3.2
 psycopg2-binary==2.9.10
+python-dotenv
 
 python-dateutil==2.9.0.post0
 pytz==2024.1
