--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ anyio==4.6.2.post1
 asgiref==3.8.1
 certifi==2024.8.30
 cffi==1.17.1
+selenium==4.15.0
+webdriver-manager==3.11.1   
+
 charset-normalizer==2.0.12
 click==8.1.7
 cloudinary==1.41.0
