--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 cffi==1.17.1
 selenium==4.15.0
-webdriver-manager==3.11.1   
+webdriver-manager
 
 charset-normalizer==2.0.12
 click==8.1.7
