--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ __pycache__/
 env/
 .env/
 .env
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.env.local
+
+venv/
