--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ certifi==2024.8.30
 cffi==1.17.1
 selenium==4.15.0
 webdriver-manager
-
+chromedriver-autoinstaller
+chromedriver-binary
 charset-normalizer==2.0.12
 click==8.1.7
 cloudinary==1.41.0
